[package]
name = "one-time-signatures-cry4"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "An implementation of Lamport and Winternitz one time signatures schemes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sha2 = "0.10.2"
itertools = "0.8"
bitvec = "1.0.0"


[features]
build-binary = []

[[bin]]
name = "benchmark"
required-features = ["build-binary"]